--- a/app/src/main/res/layout/fragment_motion.xml
+++ b/app/src/main/res/layout/fragment_motion.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
   <ScrollView
     android:layout_width="match_parent"
@@ -9,34 +8,48 @@
     <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:padding="8dp"
-      android:orientation="vertical">
+      android:orientation="vertical"
+      android:padding="16dp">
+
+      <TextView
+        style="@style/Text.PrimaryColor.Head1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:text="@string/motion_label" />
 
       <com.google.android.material.button.MaterialButton
         android:id="@+id/to_top_swipe"
+        style="@style/ButtonRectangleFill"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="4dp"
         android:text="@string/motion_top_swipe" />
 
       <com.google.android.material.button.MaterialButton
         android:id="@+id/to_side_swipe"
+        style="@style/ButtonRectangleFill"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="4dp"
         android:text="@string/motion_side_swipe" />
 
       <com.google.android.material.button.MaterialButton
         android:id="@+id/to_custom_swipe"
+        style="@style/ButtonRectangleFill"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="4dp"
         android:text="@string/motion_custom_view" />
 
       <com.google.android.material.button.MaterialButton
         android:id="@+id/to_key_position"
+        style="@style/ButtonRectangleFill"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="4dp"
         android:text="@string/motion_key_position" />
 
     </LinearLayout>
   </ScrollView>
 </layout>
-
