--- a/app/src/main/res/layout/fragment_motion_top_swipe.xml
+++ b/app/src/main/res/layout/fragment_motion_top_swipe.xml
@@ -43,7 +43,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="12dp"
-      android:text="@string/motion_label"
+      android:text="@string/motion_top_swipe_name"
       android:textSize="24sp"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="@id/image_avatar"
@@ -61,5 +61,4 @@
       app:layout_constraintTop_toBottomOf="@id/text_name" />
 
   </androidx.constraintlayout.motion.widget.MotionLayout>
-
 </layout>
