--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -4,45 +4,57 @@
 
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="16dp">
 
-    <com.google.android.material.button.MaterialButton
-      android:id="@+id/basic_notice"
+    <TextView
+      android:id="@+id/text_title"
+      style="@style/Text.PrimaryColor.Head1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="@string/notice_basic"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
+      android:text="@string/motion_label"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.button.MaterialButton
-      android:id="@+id/action_notice"
+      android:id="@+id/basic_notice"
+      style="@style/ButtonRectangleFill"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginTop="24dp"
+      android:text="@string/notice_basic"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/text_title" />
+
+    <com.google.android.material.button.MaterialButton
+      android:id="@+id/action_notice"
+      style="@style/ButtonRectangleFill"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
       android:text="@string/notice_action"
-      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/basic_notice" />
 
     <com.google.android.material.button.MaterialButton
       android:id="@+id/direct_notice"
+      style="@style/ButtonRectangleFill"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
       android:text="@string/notice_direct"
-      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/action_notice" />
 
     <com.google.android.material.button.MaterialButton
       android:id="@+id/button_notice_progress"
+      style="@style/ButtonRectangleFill"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
       android:text="@string/notice_progress"
-      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/direct_notice" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
-
