--- a/app/src/main/res/layout/fragment_playground.xml
+++ b/app/src/main/res/layout/fragment_playground.xml
@@ -95,6 +95,21 @@
         android:layout_marginVertical="4dp"
         android:text="@string/playground_camera_view" />
 
+      <TextView
+        style="@style/Text.PrimaryColor.Head3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="4dp"
+        android:text="@string/playground_label_compose" />
+
+      <com.google.android.material.button.MaterialButton
+        android:id="@+id/to_compose_view"
+        style="@style/ButtonRectangleFill"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="4dp"
+        android:text="@string/playground_hello_view" />
+
     </LinearLayout>
   </ScrollView>
 </layout>
