--- a/feature/biometric/src/main/res/layout/fragment_biometric.xml
+++ b/feature/biometric/src/main/res/layout/fragment_biometric.xml
@@ -8,12 +8,11 @@
     android:layout_height="match_parent">
 
     <TextView
-      style="@style/Text.PrimaryColor.Head1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
       android:layout_marginTop="16dp"
-      android:text="@string/biometric_label"
+      android:text="テスト"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,7 +20,7 @@
       android:id="@+id/button_hand"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="@string/biometric_fingerprint_authentication"
+      android:text="テスト"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
