--- a/feature/resources/src/main/res/values/themes.xml
+++ b/feature/resources/src/main/res/values/themes.xml
@@ -1,4 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+
   <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
     <item name="colorPrimary">@color/purple_500</item>
     <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -10,6 +11,10 @@
 
     <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
+    <item name="textAppearanceButton">@style/ButtonTextAppearance</item>
+  </style>
+
+  <style name="Material3Theme" parent="Theme.Material3.DayNight.NoActionBar">
     <item name="textAppearanceButton">@style/ButtonTextAppearance</item>
   </style>
 
