--- a/feature/core/src/main/res/navigation/nav_main.xml
+++ b/feature/core/src/main/res/navigation/nav_main.xml
@@ -133,5 +133,13 @@
   
   <fragment
     android:id="@+id/fragment_material"
-    android:name="com.example.material.MaterialFragment" />
+    android:name="com.example.material.MaterialFragment" >
+    <action
+      android:id="@+id/to_fragment_material_button"
+      app:destination="@id/fragment_material_button" />
+  </fragment>
+
+  <fragment
+    android:id="@+id/fragment_material_button"
+    android:name="com.example.material.button.MaterialButtonFragment" />
 </navigation>
