--- a/feature/material/src/main/res/layout/fragment_material.xml
+++ b/feature/material/src/main/res/layout/fragment_material.xml
@@ -28,7 +28,7 @@
       app:layout_constraintTop_toBottomOf="@id/text_label" />
 
     <com.google.android.material.button.MaterialButton
-      android:id="@+id/to_material_view"
+      android:id="@+id/to_material_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginVertical="4dp"
