--- a/feature/material/src/main/res/layout/fragment_material_button.xml
+++ b/feature/material/src/main/res/layout/fragment_material_button.xml
@@ -17,6 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/material_label_button" />
 
       <TextView
