--- a/feature/material/src/main/res/layout/fragment_material.xml
+++ b/feature/material/src/main/res/layout/fragment_material.xml
@@ -87,6 +87,23 @@
         android:layout_marginStart="16dp"
         android:text="@string/material_label_dialog" />
 
+      <TextView
+        android:id="@+id/text_label_navigation"
+        style="@style/Text.PrimaryColor.Head3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="4dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/material_label_navigation" />
+
+      <com.google.android.material.button.MaterialButton
+        android:id="@+id/to_material_navigation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="4dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/material_label_navigation" />
+
     </LinearLayout>
   </ScrollView>
 </layout>
