--- a/feature/material/src/main/res/layout/fragment_material_navigation.xml
+++ b/feature/material/src/main/res/layout/fragment_material_navigation.xml
@@ -88,6 +88,14 @@
         app:labelVisibilityMode="selected"
         app:menu="@menu/bottom_navigation_menu" />
 
+      <com.google.android.material.button.MaterialButton
+        android:id="@+id/button_add_badge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginVertical="8dp"
+        android:text="@string/material_navigation_bar_add_badge" />
+
     </LinearLayout>
   </ScrollView>
 </layout>
