--- a/feature/chart/src/main/res/layout/fragment_chart.xml
+++ b/feature/chart/src/main/res/layout/fragment_chart.xml
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto">
 
-  <LinearLayout
+  <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <TextView
+      android:id="@+id/text_title"
+      style="@style/Text.PrimaryColor.Head1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="ほげ" />
-  </LinearLayout>
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="16dp"
+      android:text="@string/chart_label"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
+
+    <com.github.mikephil.charting.charts.LineChart
+      android:id="@+id/line_chart"
+      android:layout_width="0dp"
+      android:layout_height="240dp"
+      android:layout_marginHorizontal="16dp"
+      android:layout_marginTop="16dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/text_title" />
+
+  </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
