add combined chart

--- a/feature/chart/src/main/res/layout/fragment_chart.xml
+++ b/feature/chart/src/main/res/layout/fragment_chart.xml
@@ -18,15 +18,47 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+      android:id="@+id/line_chart_label"
+      style="@style/Text.PrimaryColor.Head3"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="16dp"
+      android:text="@string/line_chart_label"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/text_title" />
+
     <com.github.mikephil.charting.charts.LineChart
       android:id="@+id/line_chart"
       android:layout_width="0dp"
       android:layout_height="240dp"
       android:layout_marginHorizontal="16dp"
-      android:layout_marginTop="16dp"
+      android:layout_marginTop="8dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/text_title" />
+      app:layout_constraintTop_toBottomOf="@id/line_chart_label" />
+
+    <TextView
+      android:id="@+id/combined_chart_label"
+      style="@style/Text.PrimaryColor.Head3"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="16dp"
+      android:text="@string/combined_chart_label"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/line_chart" />
+
+    <com.github.mikephil.charting.charts.CombinedChart
+      android:id="@+id/combined_chart"
+      android:layout_width="0dp"
+      android:layout_height="240dp"
+      android:layout_marginHorizontal="16dp"
+      android:layout_marginTop="8dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/combined_chart_label" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
