--- a/app/src/main/res/layout/fragment_playground.xml
+++ b/app/src/main/res/layout/fragment_playground.xml
@@ -110,6 +110,14 @@
         android:layout_marginVertical="4dp"
         android:text="@string/playground_camera_view" />
 
+      <com.google.android.material.button.MaterialButton
+        android:id="@+id/to_chrome_custom_tab"
+        style="@style/ButtonRectangleFill"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="4dp"
+        android:text="@string/playground_chrome_custom_tab_view" />
+
       <TextView
         style="@style/Text.PrimaryColor.Head3"
         android:layout_width="wrap_content"
