--- a/feature/groupie/src/main/res/layout/model_groupie_swipe_item.xml
+++ b/feature/groupie/src/main/res/layout/model_groupie_swipe_item.xml
@@ -20,7 +20,7 @@
       android:layout_width="0dp"
       android:layout_height="80dp"
       android:text="@{indexId}"
-      android:textColor="@color/white"
+      android:textColor="@color/text_high_emphasis_inverse"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
