--- a/app/src/main/res/layout/fragment_motion_key_position.xml
+++ b/app/src/main/res/layout/fragment_motion_key_position.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
   <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/motionLayout"
@@ -10,9 +11,7 @@
     <View
       android:id="@+id/button"
       android:layout_width="64dp"
-      android:layout_height="64dp"
-      android:background="@color/black" />
+      android:layout_height="64dp" />
 
   </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
-
