--- a/app/src/main/res/layout/fragment_motion_top_swipe.xml
+++ b/app/src/main/res/layout/fragment_motion_top_swipe.xml
@@ -54,7 +54,7 @@
       android:id="@+id/scroll_body"
       android:layout_width="0dp"
       android:layout_height="0dp"
-      android:background="@color/black"
+      android:background="@color/surface_accent_primary"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
