--- a/feature/resources/src/main/res/values/themes.xml
+++ b/feature/resources/src/main/res/values/themes.xml
@@ -3,11 +3,11 @@
   <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
     <item name="colorPrimary">@color/purple_500</item>
     <item name="colorPrimaryVariant">@color/purple_700</item>
-    <item name="colorOnPrimary">@color/white</item>
+    <item name="colorOnPrimary">@color/white_100</item>
 
     <item name="colorSecondary">@color/teal_200</item>
     <item name="colorSecondaryVariant">@color/teal_700</item>
-    <item name="colorOnSecondary">@color/black</item>
+    <item name="colorOnSecondary">@color/black_100</item>
 
     <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
